fix: resolve SonarQube issues for traveler search feature